--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,6 +1,6 @@
 
-.tema_main{
-    width: 100%;
+.team_main img{
+    width: 100vw;
 }
 
 
@@ -9,12 +9,5 @@
 }
 .team_title h1{
     width: 100px;
-    margin: 0px auto;
-}
-
-.team_img{
-    width: 100%;
-    height: 100px;
-    background-color: bisque;
     margin: 0px auto;
 }
