--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -1,4 +1,147 @@
-.contentArea{
-    width: 100vh;
+@import url(//cdn.jsdelivr.net/font-notosans-kr/1.0.0-v1004/NotoSansKR-2350.css);
+
+.contentArea {
+    width: 100vw;
+    height: 1080px;
+    font-family: NotoSansKR;
+    margin-top: 0px;
+}
+
+.container{
+    width: 100vw;
     height: 100vh;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.row {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.business_titleArea {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    height: 15%;
+}
+
+.title {
+    margin: 0;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
+    letter-spacing: 0.15px;
+    color: #313133;
+}
+
+.line {
+    width: 20%;
+    color: #707070;
+}
+
+.business_contentArea {
+    height: 35%;
+    margin-bottom: 50px;
+}
+
+.one_content_LetterArea {
+    width: 50%;
+    margin-top: 70px;
+    padding: 0;
+    float: left;
+}
+
+.one_content_title {
+    width: 95%;
+    margin-right: 25px;
+    margin-top: 0px;
+    font-size: 25px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.6px;
+    text-align: right;
+    color: #313133;
+}
+
+.one_content_info {
+    width: 95%;
+    margin-right: 25px;
+    font-size: 20px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.48;
+    letter-spacing: 0.5px;
+    text-align: right;
+    color: #666666;
+}
+
+.one_content_imgArea {
+    width: 45%;
+    margin-left: 25px;
+    text-align: left;
+    float: left;
+}
+
+.two_content_imgArea {
+    width: 48%;
+    margin-right: 25px;
+    text-align: right;
+    float: left;
+}
+
+.two_content_LetterArea {
+    width: 50%;
+    margin-top: 100px;
+    padding: 0;
+    float: left;
+}
+
+.two_content_title {
+    width: 95%;
+    margin-left: 50px;
+    margin-top: 0px;
+    font-size: 25px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.6px;
+    text-align: left;
+    color: #313133;
+    float: left;
+}
+
+.two_content_info {
+    width: 95%;
+    margin-left: 50px;
+    margin-top: 0px;
+    font-size: 20px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.48;
+    letter-spacing: 0.5px;
+    text-align: left;
+    color: #666666;
+    float: left;
+}
+.inner-box {
+    width: 1060px;
+    height: 400px;
+    position: relative;
+    top: 50px;
+    left: 378px;
+    background-color: rgba(190, 187, 187, 0.16);
 }
