--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,9 +1,14 @@
 
-.team_main img{
-    width: 100vw;
+.team_main{
+    width: 100%;
+    height: 100%;
 }
-
-
+.team_main svg{
+    padding: 15%;
+    width: 70%;
+    height: 100%;
+    
+}
 .team_title {
     width: 100%;
 }
