--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -8,7 +8,8 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .menu{
@@ -30,6 +31,8 @@ body{
 .contentArea{
     width: 100vh;
     height: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width:768px){
