--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -43,89 +43,79 @@
     height: 35%;
     margin-bottom: 50px;
 }
-
-.one_content_LetterArea {
+.bcLetterArea {
     width: 50%;
-    margin-top: 70px;
     padding: 0;
     float: left;
 }
+.bcLetterArea_left {
+    margin-top: 70px;
+}
 
-.one_content_title {
+.bcTitle {
     width: 95%;
-    margin-right: 25px;
-    margin-top: 0px;
     font-size: 25px;
     font-weight: 500;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.6px;
-    text-align: right;
     color: #313133;
 }
 
-.one_content_info {
-    width: 95%;
+.bcTitle_left {
     margin-right: 25px;
+    margin-top: 0px;
+    text-align: right;
+}
+
+.bcInfo {
+    width: 95%;
     font-size: 20px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.48;
     letter-spacing: 0.5px;
-    text-align: right;
     color: #666666;
 }
 
-.one_content_imgArea {
+.bcInfo_left {
+    margin-right: 25px;
+    text-align: right;
+}
+
+.bcImgArea{
+    float: left;
+}
+
+.bcImgArea_right {
     width: 45%;
     margin-left: 25px;
     text-align: left;
-    float: left;
 }
 
-.two_content_imgArea {
+.bcImgArea_left {
     width: 48%;
     margin-right: 25px;
     text-align: right;
-    float: left;
 }
 
-.two_content_LetterArea {
-    width: 50%;
+.bcLetterArea_right {
     margin-top: 100px;
-    padding: 0;
+}
+
+.bcTitle_right{
+    margin-left: 50px;
+    margin-top: 0px;
+    text-align: left;
     float: left;
 }
 
-.two_content_title {
-    width: 95%;
+.bcInfo_right {
     margin-left: 50px;
     margin-top: 0px;
-    font-size: 25px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.6px;
     text-align: left;
-    color: #313133;
-    float: left;
-}
-
-.two_content_info {
-    width: 95%;
-    margin-left: 50px;
-    margin-top: 0px;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.48;
-    letter-spacing: 0.5px;
-    text-align: left;
-    color: #666666;
     float: left;
 }
 .inner-box {
@@ -133,6 +123,5 @@
     height: 400px;
     position: relative;
     top: 50px;
-    left: 378px;
     background-color: rgba(190, 187, 187, 0.16);
 }
