--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -33,6 +33,7 @@ body{
     height: 100vh;
     max-width: 1200px;
     margin: 0 auto;
+    font-size: 0;
 }
 
 @media screen and (max-width:768px){
