--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -3,7 +3,7 @@
     width: 100vw;
     background-color: lawngreen;
 }
-.contentArea{
+.sub_contentArea{
     width: 100vw;
     height: 40vh;
     display: flex;
