--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,18 +1,47 @@
 
 .team_main{
     width: 100%;
-    height: 100%;
 }
-.team_main svg{
-    padding: 15%;
-    width: 70%;
-    height: 100%;
-    
-}
-.team_title {
+
+.titleArea{
+    margin-bottom: 33px;
+  }
+  p{
+    font-family: NotoSansKR;
+    text-align: center;
+  }
+  .title{
+    margin-bottom: 100px;  
+    font-size: 30px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
+    letter-spacing: 0.15px;
+    color: #313133;
+  }
+  p.title:after{
+    content: "";
+    display: block;
+    width: 192px;
+    border-bottom: 1px solid #bcbcbc;
+    margin: 18.5px auto;
+  }
+.team_profile{
     width: 100%;
+    height: 300px;
+    background-color: blue;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-.team_title h1{
-    width: 100px;
-    margin: 0px auto;
+.team_pic{
+    width: 45%;
+    height: 200px;
+    background-color: brown;
+}
+.team_history{
+    width: 45%;
+    height: 200px;
+    background-color: yellow;
 }
