--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -1,6 +1,7 @@
 .business_container {
     width: 100%;
-    height: 800px;
+    height: 1000px;
+    padding-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
@@ -76,11 +77,6 @@
     padding-left: 25px;
 }
 
-.container{
-    width: 100%;
-    height: 100%;
-    /* padding: 0 15px; */
-}
 
 .business_titleArea {
     display: inline-block;
