--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -13,7 +13,6 @@
 }
 
 .bitem1 .bctitle{
-    width: 95%;
     font-size: 25px;
     font-weight: 500;
     font-stretch: normal;
@@ -28,13 +27,12 @@
 
 }
 .bitem1 .bcinfo{
-    width: 95%;
     font-size: 20px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1.48;
-    letter-spacing: 0.5px;
+    line-height: 1.5;
+    letter-spacing: 0.6px;
     color: #666666;
     text-align: right;
 }
@@ -50,7 +48,6 @@
 }
 
 .bitem4 .bctitle{
-    width: 95%;
     font-size: 25px;
     font-weight: 500;
     font-stretch: normal;
@@ -70,8 +67,8 @@
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1.48;
-    letter-spacing: 0.5px;
+    line-height: 1.5;
+    letter-spacing: 0.6px;
     color: #666666;
     text-align: left;
     padding-left: 25px;
@@ -82,7 +79,7 @@
     display: inline-block;
     vertical-align: middle;
     width: 100%;
-    height: 15%;
+    height: 150px;
 }
 
 .title {
