--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -13,6 +13,7 @@
 }
 
 .bitem1 .bctitle{
+    width: 95%;
     font-size: 25px;
     font-weight: 500;
     font-stretch: normal;
@@ -27,12 +28,13 @@
 
 }
 .bitem1 .bcinfo{
+    width: 95%;
     font-size: 20px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.6px;
+    line-height: 1.48;
+    letter-spacing: 0.5px;
     color: #666666;
     text-align: right;
 }
@@ -48,6 +50,7 @@
 }
 
 .bitem4 .bctitle{
+    width: 95%;
     font-size: 25px;
     font-weight: 500;
     font-stretch: normal;
@@ -67,8 +70,8 @@
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.6px;
+    line-height: 1.48;
+    letter-spacing: 0.5px;
     color: #666666;
     text-align: left;
     padding-left: 25px;
