--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -8,8 +8,9 @@
 }
 
 .bitem {
-    width: 50%;
+    flex-basis: 50%;
     height: 400px;
+    overflow: hidden;
 }
 
 .bitem1 .bctitle{
@@ -29,7 +30,7 @@
 }
 .bitem1 .bcinfo{
     width: 95%;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -66,7 +67,7 @@
 
 .bitem4 .bcinfo{
     width: 95%;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
