--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,9 +1,9 @@
 .c_container {
     width: 100%;
-    height: 450px;
+    height: 400px;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
+    justify-content: flex-start;
 }
 
 .c_text {
@@ -17,11 +17,11 @@
 .c_item1 {
     height: 150px;
     padding: 20px 0;
-    width: 20%;
+    flex-basis: 25%;
 }
 
 .c_title {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     text-align: left;
     margin-left: 50px;
@@ -30,22 +30,27 @@
 .c_item2 {
     height: 150px;
     padding: 23px 0;
-    width: 80%;
+    flex-basis: 75%;
 }
 
+.c_item3 {
+    height: 70px;
+    padding: 20px 0;
+    flex-basis: 25%;
+}
 .c_address {
-    font-size: 25px;
+    font-size: 15px;
     font-weight: 500;
     text-align: left;
-    margin-left: 100px;
-    margin-bottom: 25px;
+    margin-left: 50px;
+    margin-bottom: 15px;
 }
 
 .c_info {
-    font-size: 25px;
+    font-size: 15px;
     font-weight: 300;
     text-align: left;
-    margin-left: 100px;
+    margin-left: 50px;
 }
 
 .title {
@@ -69,4 +74,5 @@
 
 .map {
     padding-bottom: 100px;
+    overflow: hidden;
 }
