--- a/src/components/Partner.css
+++ b/src/components/Partner.css
@@ -31,21 +31,31 @@ p.title:after{
   color: #666666;
 }
 .partner-container {
-  padding-inline-start: 20vw;
-  padding-inline-end: 20vw;
-  width : 60vw;
-  column-gap: 10px;
+  width : 76%;
+  margin: 0 12% 40% 12%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: stretch;
-  align-content: space-between;
   justify-content: center;
 }
 .partner-item {
   flex-basis: 130px;
-  flex-grow: 0;
-  padding: 10px;
+  margin: 10px;
+  width: 160px;
   height: 70px;
-  text-align: center;
+}
+.partner-container2{
+  width: 900px; /* this is variable*/
+  height: 900px;
+  box-sizing: border-box;
+  vertical-align: top;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 20px;
+  grid-column-end: span 1;
+  grid-row-end: span 2;
+}
+.partner-item2{
+  padding: auto;
 }
