--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -14,6 +14,7 @@ body{
     max-width: 1400px;
     height: 60px;
     margin: 0 auto;
+    
 }
 
 .menu{
@@ -23,6 +24,10 @@ body{
 }
 .menu li {
     padding: 8px 12px;
+    font-weight: 530;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
 }
 .menu_item {
     text-decoration: none;
@@ -36,6 +41,7 @@ body{
     width: 100vh;
     max-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 15%;
 }
 
 @media screen and (max-width:768px){
