--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.main_footer{
-    background-color: paleturquoise;
-    text-align: center;
-}
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -35,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0;
+    font-family: NotoSansKR;
 }
 ol, ul {
 	list-style: none;
@@ -53,4 +50,83 @@ table {
 }
 * {
   box-sizing: border-box;
+}
+.logo{
+    height: 60%;
+}
+.nav_list{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1400px;
+    height: 60px;
+	margin: 0 auto;
+    
+}
+
+.list{
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+.list li {
+    padding: 8px 12px;
+    font-weight: 530;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
+}
+.list li a {
+	overflow:hidden;
+	text-decoration: none;
+	transition: transform .5s;
+	color: black;
+}
+.list li a:hover {
+	text-decoration: none;
+	transform:translateX(-10px);
+	-webkit-transform:translateX(-10px);
+	-moz-transform:translateX(-10px);
+	-o-transform:translateX(-10px);
+	-ms-transform:translateX(-10px);
+}
+.active .nav_list .list li a {
+	animation-play-state: running;
+}
+.menu_item {
+    text-decoration: none;
+    color: black;
+}
+.menu_icon{
+    margin: auto 0;
+}
+
+.contentArea{
+    width: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 15%;
+}
+
+@media screen and (max-width:768px){
+    .top_container{
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 8px 24px;
+    }
+    .menu{
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+    }
+    .menu_icon{
+        position: absolute;
+        right:32px;
+        top: 20px;
+    }
+
+    .menu.active{
+        display: flex;
+    }
 }
